k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: domain-tracker
  labels:
    name: domain-tracker
